added nav styles to html

--- a/html/index.html
+++ b/html/index.html
@@ -11,10 +11,44 @@
 	</head>
 	<body>
 		<!-- navigation -->
-		<nav style="display: flex; width: 100%">
-			<div>Arthur Blake</div>
-			<a href="/index.html">Home</a>
-			<a href="/pages/inventory.html">Inventory</a>
+		<nav
+			style="
+				height: 10vh;
+				text-transform: lowercase;
+				display: flex;
+				justify-content: flex-end;
+				align-items: center;
+				gap: 50px;
+				padding: 50px;
+				box-sizing: border-box;
+				position: relative;
+				font-size: 25px;
+				font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+					'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+			"
+		>
+			<div
+				style="
+					letter-spacing: 5px;
+					position: absolute;
+					left: 50px;
+					color: hsl(0, 0%, 20%);
+				"
+			>
+				Arthur Blake
+			</div>
+			<a
+				style="text-decoration: none; color: hsl(210, 80%, 50%)"
+				href="/index.html"
+			>
+				Home
+			</a>
+			<a
+				style="text-decoration: none; color: hsl(210, 80%, 50%)"
+				href="/pages/inventory.html"
+			>
+				Inventory
+			</a>
 		</nav>
 		<!-- main content -->
 		<main>
