--- a/html/index.html
+++ b/html/index.html
@@ -8,45 +8,42 @@
 		<title>AB - HTML</title>
 		<meta name="description" content="Blake's HTML Knowledge" />
 		<link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+
+		<link rel="stylesheet" href="https://use.typekit.net/jwv2xzz.css" />
 	</head>
-	<body>
+	<body
+		style="
+			margin: 0;
+			padding: 0;
+			background-color: hsl(0, 0%, 96%);
+			font-family: futura-pt, sans-serif;
+			font-weight: 400;
+			font-style: normal;
+		"
+	>
 		<!-- navigation -->
 		<nav
 			style="
 				height: 10vh;
-				text-transform: lowercase;
 				display: flex;
 				justify-content: flex-end;
 				align-items: center;
 				gap: 50px;
 				padding: 50px;
 				box-sizing: border-box;
-				position: relative;
-				font-size: 25px;
-				font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-					'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+				width: 100%;
+				font-size: 20px;
+				box-shadow: 0 2px 2px hsla(0, 0%, 20%, 0.2);
+				background-color: hsl(0, 0%, 98%);
+				color: hsl(0, 0%, 20%);
+				letter-spacing: 2px;
 			"
 		>
-			<div
-				style="
-					letter-spacing: 5px;
-					position: absolute;
-					left: 50px;
-					color: hsl(0, 0%, 20%);
-				"
-			>
+			<div style="letter-spacing: 10px; position: absolute; left: 50px">
 				Arthur Blake
 			</div>
-			<a
-				style="text-decoration: none; color: hsl(210, 80%, 50%)"
-				href="/index.html"
-			>
-				Home
-			</a>
-			<a
-				style="text-decoration: none; color: hsl(210, 80%, 50%)"
-				href="/pages/inventory.html"
-			>
+			<a style="text-decoration: none" href="/index.html">Home</a>
+			<a style="text-decoration: none" href="/pages/inventory.html">
 				Inventory
 			</a>
 		</nav>
