--- a/html/index.html
+++ b/html/index.html
@@ -48,9 +48,24 @@
 			</a>
 		</nav>
 		<!-- main content -->
-		<main>
-			<img src="" alt="" />
-			<h1>Welcome to Arthur Blake</h1>
+		<main style="width: 100%; height: 90vh">
+			<img
+				src="/images/Claude_Monet_-_Reflections_of_Clouds_on_the_Water-Lily_Pond.jpg"
+				alt=""
+				style="width: 100%; height: 100%; object-fit: cover"
+			/>
+			<h1
+				style="
+					position: absolute;
+					left: 50%;
+					top: 50%;
+					transform: translate(-50%, -50%);
+					color: hsl(0, 0%, 96%);
+					letter-spacing: 10px;
+				"
+			>
+				Welcome to Arthur Blake.
+			</h1>
 		</main>
 		<aside></aside>
 		<footer></footer>
