--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
 				background-color: hsl(0, 0%, 98%);
 				color: hsl(0, 0%, 20%);
 				letter-spacing: 2px;
+				position: relative;
 			"
 		>
 			<div style="letter-spacing: 10px; position: absolute; left: 50px">
