added area for ads

--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,9 @@
 				Welcome to Arthur Blake.
 			</h1>
 		</main>
-		<aside></aside>
+		<aside>
+			<h1>Advertisement</h1>
+		</aside>
 		<footer></footer>
 	</body>
 </html>
