--- a/html/index.html
+++ b/html/index.html
@@ -68,9 +68,57 @@
 				Welcome to Arthur Blake.
 			</h1>
 		</main>
-		<aside>
-			<h1>Advertisement</h1>
-		</aside>
-		<footer></footer>
+		<div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+		<footer
+			style="
+				height: 15vh;
+				width: 100%;
+				display: flex;
+				justify-content: space-evenly;
+				align-items: center;
+				background-color: hsl(0, 0%, 10%);
+			"
+		>
+			<div
+				style="
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					font-size: 20px;
+				"
+			>
+				<a style="color: hsl(0, 0%, 96%); text-decoration: none" href="#">
+					Legal
+				</a>
+				<a style="color: hsl(0, 0%, 96%); text-decoration: none" href="#">
+					Copyright
+				</a>
+				<a style="color: hsl(0, 0%, 96%); text-decoration: none" href="#">
+					License
+				</a>
+			</div>
+			<div
+				style="
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					font-size: 20px;
+				"
+			>
+				<a style="color: hsl(0, 0%, 96%); text-decoration: none" href="#">
+					Home
+				</a>
+				<a style="color: hsl(0, 0%, 96%); text-decoration: none" href="#">
+					About
+				</a>
+				<a style="color: hsl(0, 0%, 96%); text-decoration: none" href="#">
+					Contact
+				</a>
+			</div>
+		</footer>
 	</body>
 </html>
